Revert "added new check on ssh"
This reverts commit 97bdff31263a98c161dbe2a23d805e45a0e9221d.

--- a/exercise11-fix.yaml
+++ b/exercise11-fix.yaml
@@ -117,9 +117,7 @@
       ignore_errors: true
       no_log: true
       register: testssha
-      until:
-        - testssha.rc == 0
-        - "'lab-user@vmi' not in testssha.stdout"
+      until: testssha.rc == 0
       retries: 20
       delay: 5
 
@@ -129,8 +127,6 @@
       ignore_errors: true
       no_log: true
       register: testsshb
-      until:
-        - testsshb.rc == 0
-        - "'lab-user@vmi' not in testsshb.stdout"
+      until: testsshb.rc == 0
       retries: 20
       delay: 5
