--- a/exercise6-fix.yaml
+++ b/exercise6-fix.yaml
@@ -78,9 +78,7 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
 
@@ -141,9 +139,7 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
 
