--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -68,9 +68,7 @@
       ignore_errors: true
       no_log: true
       register: testssha
-      until:
-        - testssha.rc == 0
-        - "'lab-user@vmi' not in testssha.stdout"
+      until: testssha.rc == 0
       retries: 20
       delay: 5
 
@@ -80,9 +78,7 @@
       ignore_errors: true
       no_log: true
       register: testsshb
-      until:
-        - testsshb.rc == 0
-        - "'lab-user@vmi' not in testsshb.stdout"
+      until: testsshb.rc == 0
       retries: 20
       delay: 5
 
