--- a/exercise10-fix.yaml
+++ b/exercise10-fix.yaml
@@ -133,9 +133,7 @@
       ignore_errors: true
       no_log: true
       register: testssha
-      until:
-        - testssha.rc == 0
-        - "'lab-user@vmi' not in testssha.stdout"
+      until: testssha.rc == 0
       retries: 20
       delay: 5
 
@@ -145,9 +143,7 @@
       ignore_errors: true
       no_log: true
       register: testsshb
-      until:
-        - testsshb.rc == 0
-        - "'lab-user@vmi' not in testsshb.stdout"
+      until: testsshb.rc == 0
       retries: 20
       delay: 5
 
