--- a/exercise12-fix.yaml
+++ b/exercise12-fix.yaml
@@ -153,9 +153,7 @@
       ignore_errors: true
       no_log: true
       register: testssha
-      until:
-        - testssha.rc == 0
-        - "'lab-user@vmi' not in testssha.stdout"
+      until: testssha.rc == 0
       retries: 20
       delay: 5
 
@@ -165,9 +163,7 @@
       ignore_errors: true
       no_log: true
       register: testsshb
-      until:
-        - testsshb.rc == 0
-        - "'lab-user@vmi' not in testsshb.stdout"
+      until: testsshb.rc == 0
       retries: 20
       delay: 5
 
