--- a/exercise3-fix.yaml
+++ b/exercise3-fix.yaml
@@ -138,8 +138,6 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
