--- a/exercise4-break.yaml
+++ b/exercise4-break.yaml
@@ -48,9 +48,7 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
 
