--- a/exercise5-break.yaml
+++ b/exercise5-break.yaml
@@ -74,8 +74,6 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
