--- a/exercise6-break.yaml
+++ b/exercise6-break.yaml
@@ -88,9 +88,7 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until:
-        - testssh.rc == 0
-        - "'lab-user@vmi' not in testssh.stdout"
+      until: testssh.rc == 0
       retries: 20
       delay: 5
 
