--- a/exercise12-fix.yaml
+++ b/exercise12-fix.yaml
@@ -149,7 +149,7 @@
 
     - name: Wait for exercise12-a
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise12-a
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise12-a
       ignore_errors: true
       no_log: true
       register: testssha
@@ -159,7 +159,7 @@
 
     - name: Wait for exercise12-b
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise12-b
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise12-b
       ignore_errors: true
       no_log: true
       register: testsshb
