--- a/exercise5-fix.yaml
+++ b/exercise5-fix.yaml
@@ -115,7 +115,7 @@
 
     - name: Wait for exercise5
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise5
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise5
       ignore_errors: true
       no_log: true
       register: testssh
