--- a/exercise5-grade.yaml
+++ b/exercise5-grade.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Testing fdisk on exercise5 virtual machine
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise5 --command 'sudo fdisk -l /dev/sda'
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise5 --command 'sudo fdisk -l /dev/sda'
       ignore_errors: true
       no_log: true
       register: testssh
