Revert "changed SSH to use key"
This reverts commit 13daefbf2cb21f0720dbce44deab9a65a5ddc13e.

--- a/exercise12-break.yaml
+++ b/exercise12-break.yaml
@@ -64,7 +64,7 @@
 
     - name: Wait for exercise12-a
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise12-a
+        cmd: virtctl ssh lab-user@exercise12-a
       ignore_errors: true
       no_log: true
       register: testssha
@@ -74,7 +74,7 @@
 
     - name: Wait for exercise12-b
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise12-b
+        cmd: virtctl ssh lab-user@exercise12-b
       ignore_errors: true
       no_log: true
       register: testsshb
