--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -64,7 +64,7 @@
 
     - name: Wait for exercise10-a
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise10-a
+        cmd: virtctl ssh lab-user@exercise10-a
       ignore_errors: true
       no_log: true
       register: testssha
@@ -74,7 +74,7 @@
 
     - name: Wait for exercise10-b
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise10-b
+        cmd: virtctl ssh lab-user@exercise10-b
       ignore_errors: true
       no_log: true
       register: testsshb
