--- a/exercise11-fix.yaml
+++ b/exercise11-fix.yaml
@@ -113,7 +113,7 @@
 
     - name: Wait for exercise11-a
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise11-a
+        cmd: virtctl ssh lab-user@exercise11-a
       ignore_errors: true
       no_log: true
       register: testssha
@@ -123,7 +123,7 @@
 
     - name: Wait for exercise11-b
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise11-b
+        cmd: virtctl ssh lab-user@exercise11-b
       ignore_errors: true
       no_log: true
       register: testsshb
