--- a/exercise11-grade.yaml
+++ b/exercise11-grade.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Check if exercise11-b vm is reachable
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise11-a --command 'ping -c1 192.168.0.11'
+        cmd: virtctl ssh lab-user@exercise11-a --command 'ping -c1 192.168.0.11'
       ignore_errors: true
       no_log: true
       register: testping
