--- a/exercise4-fix.yaml
+++ b/exercise4-fix.yaml
@@ -78,7 +78,7 @@
 
     - name: Wait for exercise4
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise4
+        cmd: virtctl ssh lab-user@exercise4
       ignore_errors: true
       no_log: true
       register: testssh
