--- a/exercise6-fix.yaml
+++ b/exercise6-fix.yaml
@@ -74,7 +74,7 @@
 
     - name: Wait for exercise6
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise6
+        cmd: virtctl ssh lab-user@exercise6
       ignore_errors: true
       no_log: true
       register: testssh
@@ -135,7 +135,7 @@
 
     - name: Wait for exercise6
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise6
+        cmd: virtctl ssh lab-user@exercise6
       ignore_errors: true
       no_log: true
       register: testssh
