--- a/exercise8-fix.yaml
+++ b/exercise8-fix.yaml
@@ -85,7 +85,7 @@
 
     - name: Wait the ssh access on exercise8 vm
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise8
+        cmd: virtctl ssh lab-user@exercise8
       no_log: true
       register: testssh
       until: testssh.rc == 0
