--- a/exercise8-grade.yaml
+++ b/exercise8-grade.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Testing the ssh access
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise8
+        cmd: virtctl ssh lab-user@exercise8
       ignore_errors: true
       no_log: true
       register: testssh
