--- a/exercise9-break.yaml
+++ b/exercise9-break.yaml
@@ -49,7 +49,7 @@
 
     - name: Wait for exercise9
       ansible.builtin.command:
-        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa lab-user@exercise9
+        cmd: virtctl ssh lab-user@exercise9
       ignore_errors: true
       no_log: true
       register: testssh
