--- a/exercise8-grade.yaml
+++ b/exercise8-grade.yaml
@@ -12,7 +12,9 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until: testssh.rc == 0
+      until:
+        - testssh.rc == 0
+        - "'Permanently added' in testssh.stderr"
       retries: 5
       delay: 5
 
