--- a/exercise6-fix.yaml
+++ b/exercise6-fix.yaml
@@ -78,7 +78,9 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until: testssh.rc == 0
+      until:
+        - testssh.rc == 0
+        - "'Permanently added' in testssh.stderr"
       retries: 20
       delay: 5
 
@@ -139,7 +141,9 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until: testssh.rc == 0
+      until:
+        - testssh.rc == 0
+        - "'Permanently added' in testssh.stderr"
       retries: 20
       delay: 5
 
