Revert "log on wait ssh"
This reverts commit bfe3d8e338bc9124ce412b68e57b873ea06094e2.

--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -66,6 +66,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise10-a
       ignore_errors: true
+      no_log: true
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -75,6 +76,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise10-b
       ignore_errors: true
+      no_log: true
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
