--- a/exercise11-fix.yaml
+++ b/exercise11-fix.yaml
@@ -115,6 +115,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise11-a
       ignore_errors: true
+      no_log: true
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -124,6 +125,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise11-b
       ignore_errors: true
+      no_log: true
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
