--- a/exercise12-fix.yaml
+++ b/exercise12-fix.yaml
@@ -151,6 +151,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise12-a
       ignore_errors: true
+      no_log: true
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -160,6 +161,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise12-b
       ignore_errors: true
+      no_log: true
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
