--- a/exercise6-break.yaml
+++ b/exercise6-break.yaml
@@ -86,6 +86,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise6
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
