--- a/exercise9-break.yaml
+++ b/exercise9-break.yaml
@@ -51,6 +51,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise9
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
