--- a/exercise10-fix.yaml
+++ b/exercise10-fix.yaml
@@ -131,6 +131,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise10-a
       ignore_errors: true
+      no_log: true
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -140,6 +141,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise10-b
       ignore_errors: true
+      no_log: true
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
