--- a/exercise12-grade.yaml
+++ b/exercise12-grade.yaml
@@ -18,6 +18,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise12-a --command 'curl --connect-timeout 2 http://{{ exercise11bip.stdout }}'
       ignore_errors: true
+      no_log: true
       register: testcurl
       until: testcurl.rc == 0
       retries: 5
