--- a/exercise3-break.yaml
+++ b/exercise3-break.yaml
@@ -76,6 +76,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise3
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
