--- a/exercise3-fix.yaml
+++ b/exercise3-fix.yaml
@@ -136,6 +136,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise3
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
