--- a/exercise5-break.yaml
+++ b/exercise5-break.yaml
@@ -72,6 +72,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise5
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
