--- a/exercise9-fix.yaml
+++ b/exercise9-fix.yaml
@@ -82,6 +82,7 @@
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise9
       ignore_errors: true
+      no_log: true
       register: testssh
       until:
         - testssh.rc == 0
