--- a/exercise11-break.yaml
+++ b/exercise11-break.yaml
@@ -64,9 +64,9 @@
 
     - name: Wait for exercise11-a
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise11-a
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise11-a
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -74,9 +74,9 @@
 
     - name: Wait for exercise11-b
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise11-b
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise11-b
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
