--- a/exercise12-fix.yaml
+++ b/exercise12-fix.yaml
@@ -149,9 +149,9 @@
 
     - name: Wait for exercise12-a
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise12-a
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise12-a
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testssha
       until: testssha.rc == 0
       retries: 20
@@ -159,9 +159,9 @@
 
     - name: Wait for exercise12-b
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise12-b
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise12-b
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testsshb
       until: testsshb.rc == 0
       retries: 20
