--- a/exercise3-fix.yaml
+++ b/exercise3-fix.yaml
@@ -134,9 +134,9 @@
 
     - name: Wait for exercise3
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise3
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise3
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testssh
       until:
         - testssh.rc == 0
