--- a/exercise6-fix.yaml
+++ b/exercise6-fix.yaml
@@ -74,9 +74,9 @@
 
     - name: Wait for exercise6
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise6
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise6
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testssh
       until:
         - testssh.rc == 0
@@ -137,9 +137,9 @@
 
     - name: Wait for exercise6
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise6
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise6
       ignore_errors: true
-      no_log: true
+      no_log: false
       register: testssh
       until:
         - testssh.rc == 0
