--- a/exercise8-fix.yaml
+++ b/exercise8-fix.yaml
@@ -85,8 +85,8 @@
 
     - name: Wait the ssh access on exercise8 vm
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise8
-      no_log: true
+        cmd: virtctl ssh -i /home/{{ user }}/.ssh/id_rsa  lab-user@exercise8
+      no_log: false
       register: testssh
       until:
         - testssh.rc == 0
