--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -560,7 +560,7 @@
           apiVersion: rbac.authorization.k8s.io/v1
           kind: ClusterRoleBinding
           metadata:
-            name: read-nodenetworkstates-cluster-binding
+            name: read-nodenetworkstates-cluster-binding-user{{ item }}
           subjects:
             - kind: User
               name: user{{ item }}
