--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -2,12 +2,14 @@
   hosts: localhost
 
   tasks:
-
-    - name: Ensure required Ansible collections are installed
-      ansible.builtin.command:
-        cmd: ansible-galaxy collection install kubernetes.core community.libvirt community.general ansible.posix community.crypto
-      register: collections_install
-      changed_when: "'was installed successfully' in collections_install.stdout"
+    - name: Install Python requirements from all requirements.yaml files
+      ansible.builtin.shell:
+        cmd: |
+          for req in $(find {{ playbook_dir | default('.') }} -name requirements.yaml); do
+            pip3 install -r "$req" || true
+          done
+      register: requirements_install
+      changed_when: false
       ignore_errors: true
 
     - name: Ensure openshift-nmstate exists
