--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -1,24 +1,8 @@
 - name: Admin configure users prerequesites
   hosts: localhost
-
+  vars:
+    ansible_python_interpreter: /usr/bin/python3.9
   tasks:
-    - name: Ensure kubernetes Python package is installed
-      ansible.builtin.pip:
-        name: kubernetes
-        executable: pip3
-      become: true
-      ignore_errors: true
-
-    - name: Install all Ansible Galaxy collections from requirements.yml files
-      ansible.builtin.shell:
-        cmd: |
-          for req in $(find {{ playbook_dir | default('.') }} -name requirements.yml); do
-            ansible-galaxy collection install -r "$req" || true
-          done
-      register: galaxy_requirements_install
-      changed_when: false
-      ignore_errors: true
-
     - name: Ensure openshift-nmstate exists
       kubernetes.core.k8s:
         state: present
