--- a/exercise5-grade.yaml
+++ b/exercise5-grade.yaml
@@ -4,6 +4,7 @@
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
+    ansible_python_interpreter: /usr/bin/python3.9
 
   tasks:
     - name: Testing fdisk on exercise5 virtual machine
