--- a/exercise10-grade.yaml
+++ b/exercise10-grade.yaml
@@ -4,6 +4,7 @@
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
+    ansible_python_interpreter: /usr/bin/python3.9
 
   tasks:
     - name: Check if exercise10-b VM is reachable
