--- a/exercise2-break.yaml
+++ b/exercise2-break.yaml
@@ -4,6 +4,7 @@
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
+    ansible_python_interpreter: /usr/bin/python3.9
 
   tasks:
     - name: Creating VM exercise2
