--- a/exercise5-fix.yaml
+++ b/exercise5-fix.yaml
@@ -4,6 +4,7 @@
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
+    ansible_python_interpreter: /usr/bin/python3.9
 
   tasks:
     - name: Removing data disk 1 from virtual machine
