--- a/exercise9-break.yaml
+++ b/exercise9-break.yaml
@@ -5,6 +5,7 @@
 
   vars:
     user: "{{ lookup('env', 'USER') }}"
+    ansible_python_interpreter: /usr/bin/python3.9
 
   tasks:
     - name: Create SSH config file with StrictHostKeyChecking no
