Revert "VirtualMachineSnapshot instead of VirtualMachineRestore"
This reverts commit f17c6d1df9005da397aab1d577707a3319b4b309.

--- a/exercise7-fix.yaml
+++ b/exercise7-fix.yaml
@@ -115,11 +115,11 @@
 
     - name: Restore the snapshot
       kubernetes.core.k8s:
-        kind: VirtualMachineSnapshot
+        kind: VirtualMachineRestore
         namespace: 'namespace-{{ user }}'
         definition:
           apiVersion: snapshot.kubevirt.io/v1alpha1
-          kind: VirtualMachineSnapshot
+          kind: VirtualMachineRestore
           metadata:
             name: restore-exercise7-snapshot
           spec:
