--- a/exercise6-fix.yaml
+++ b/exercise6-fix.yaml
@@ -93,7 +93,7 @@
         state: present
         definition:
           spec:
-            running: false
+            runStrategy: Halted
       register: stopvm
       until: stopvm is succeeded
       retries: 60
