--- a/exercise7-break.yaml
+++ b/exercise7-break.yaml
@@ -35,7 +35,7 @@
         kind: VirtualMachineSnapshot
         namespace: 'namespace-{{ user }}'
         definition:
-          apiVersion: snapshot.kubevirt.io/v1alpha1
+          apiVersion: snapshot.kubevirt.io/v1beta1
           kind: VirtualMachineSnapshot
           metadata:
             name: exercise7-snapshot
