--- a/exercise7-fix.yaml
+++ b/exercise7-fix.yaml
@@ -137,7 +137,7 @@
         state: present
         definition:
           spec:
-            running: true
+            runStrategy: Always
       register: startvm
       until: startvm is succeeded
       retries: 60
